# video-organise

./: .gitignore  CLAUDE.md  README.md  SPEC.md  fix_structure.py  pyproject.toml  specification.md  test_fix_structure.py  test_video_organise.py  video_organise.py
.github/workflows/: publish.yml
